# vidgrid

./: .gitignore  LICENSE  README.md  pyproject.toml
agent/: README.md  SKILL.md
agent/cli/: README.md  cli.js  package.json
agent/mcp/: README.md  pyproject.toml  server.json
agent/mcp/vidgrid_mcp/: __init__.py
tests/: test_captions.py  test_compose.py  test_llm.py  test_presets.py  test_sample.py
vidgrid/: __init__.py  __main__.py  api.py  captions.py  cli.py  compose.py  llm.py  models.py  output.py  presets.py  probe.py  sample.py
