[project]
name = "vidgrid-mcp"
version = "0.1.0"
description = "MCP server that gives an AI assistant eyes for video, via the vidgrid render API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
vidgrid-mcp = "vidgrid_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
